[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wt-tmux-picker"
version = "1.0.2"
description = "Windows Terminal + tmux session picker via SSH"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = "==3.12.*"
authors = [{name = "mahsoommoosa42"}]
keywords = ["tmux", "windows-terminal", "ssh", "fzf", "tui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "prompt_toolkit",
    "tmux-manager>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mahsoommoosa42/wt-tmux-picker"
Source = "https://github.com/mahsoommoosa42/wt-tmux-picker"
"Bug Tracker" = "https://github.com/mahsoommoosa42/wt-tmux-picker/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
wt-tmux-picker = "wt_tmux_picker.cli:main"

[tool.uv.sources]
tmux-manager = {git = "https://github.com/mahsoommoosa42/tmux-manager.git", branch = "main"}

[tool.setuptools.packages.find]
where = ["."]
include = ["wt_tmux_picker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wt_tmux_picker --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["wt_tmux_picker"]

[tool.coverage.report]
show_missing = true
